tests/machine/x/pl/two-sum.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/two-sum.pl:32:60: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/two-sum.pl:35:43: Syntax error: Illegal start of term
ERROR: /workspace/mochi/tests/machine/x/pl/two-sum.pl:48: user:main main/0: Unknown procedure: twoSum/3

